--- a/views/podcasts.pug
+++ b/views/podcasts.pug
@@ -1,8 +1,178 @@
 extends _layout.pug
 
 block vars
-  - var pageTitle="A propos"
+  - var pageTitle="Podcasts"
 
 block content
   block contentAjax
-    p A propos de nous.
+    h1 Nos podcasts
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
+    p Test
