--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -37,7 +37,20 @@ else
               li 18h00 Sylvain & The Gang
               li 18h05 Emilie & The Flowers
               li 18h10 Emilie & The Flowers
-            p Rechercher un titre
+            p Rechercher un titre passé
+            .row
+                select#searchDay.column.large-6
+                  - for (var i = 0; i < 15; i++)
+                    - var date = myFunctions.returnDate(i)
+                      option(value=date)= date
+                select#searchHour.column.large-6
+                 - for (var h = 0; h < 24; h++)
+                   - for (var m = 0; m < 60; m+=5)
+                    - var min = myFunctions.twoDigitsNumber(m)
+                    - var heure = h + ":" + min
+                    option(value=heure) #{heure}
+                button.button.expanded.secondary Rechercher
+                ul#searchResults
       section#content.column.small-12.large-9
         block content
 
@@ -46,4 +59,5 @@ else
         script(src='/js/what-input.js')
         script(src='/js/foundation.min.js')
         script(src='/js/nprogress.js')
+        script(src='/js/shared.js')
         script(src='/js/main.js')
