--- a/views/podcasts.pug
+++ b/views/podcasts.pug
@@ -6,173 +6,4 @@ block vars
 block content
   block contentAjax
     h1 Nos podcasts
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
-    p Test
+    p.lead Voici la liste des émissions disponibles au téléchargement:
