--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,10 +47,14 @@ aside #nowPlaying p {
  margin-bottom: .5em;
 }
 
+aside #search {
+ margin-bottom: .5em;
+}
+
 aside #nowPlaying ul {
   list-style-type: none;
   line-height: 1.2;
-  font-size: 14px;
+  font-size: 12px;
   margin-bottom: 1em;
 }
 
