--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,7 +36,7 @@ section#content h1 {
 }
 
 aside p, aside #nowPlaying {
-  text-shadow: 1px 1px #fff;
+  text-shadow: rgba(255, 255, 255, .5) 1px 1px, rgba(255, 255, 255, .5) -1px 1px, rgba(255, 255, 255, .5) -1px -1px, rgba(255, 255, 255, .5) 1px -1px;
 }
 
 aside #nowPlaying {
@@ -54,8 +54,9 @@ aside #search {
 aside #nowPlaying ul {
   list-style-type: none;
   line-height: 1.2;
-  font-size: 12px;
+  font-size: 14px;
   margin-bottom: 1em;
+  text-transform: capitalize;
 }
 
 aside #nowPlaying select {
