--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -46,6 +46,7 @@ else
                     - var heure = h + ":" + min
                     option(value=heure) #{heure}
                 button#search.button.expanded.secondary Rechercher
+                p#searchResultsIntro.hide A cette heure il passait
                 ul#searchResults
       section#content.column.small-12.large-9
         block content
