--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -7,3 +7,12 @@ block content
   block contentAjax
     h1 A propos de nous.
     p On est cool.
+    div.row
+      div.column.small-12.large-6
+        p Coucou 1
+      div.column.small-12.large-6
+        p Coucou 2
+    script(src="https://maps.googleapis.com/maps/api/js")
+    script.
+      // The init map here
+
