--- a/views/podcasts.pug
+++ b/views/podcasts.pug
@@ -7,3 +7,17 @@ block content
   block contentAjax
     h1 Nos podcasts
     p.lead Voici la liste des émissions disponibles au téléchargement:
+    - // Magic to extract unique categories
+    - var categories = [...new Set(podcasts.map(item => item.category))] 
+    each category in categories
+      h2= category
+      each podcast in podcasts
+        if podcast.category == category
+          .media-object
+            //a(href=podcast.file) Link
+            .media-object-section
+              .thumbnail
+                img(src="/img/logo.png")
+            .media-object-section
+              h5= podcast.category
+              p Emission du #{myFunctions.formatDate(podcast.date)}
