--- a/views/podcasts.pug
+++ b/views/podcasts.pug
@@ -6,17 +6,16 @@ block vars
 block content
   block contentAjax
     h1 Nos podcasts
-    p.lead Voici la liste des émissions disponibles au téléchargement:
+    p.lead Voici la liste des émissions disponibles au téléchargement :
     - // Magic to extract unique categories
     - var categories = [...new Set(podcasts.map(item => item.category))] 
     each category in categories
       h2= category
       each podcast in podcasts
         if podcast.category == category
-          .media-object
-            //a(href=podcast.file) Link
+          .media-object#podcast
             .media-object-section
-              .thumbnail
+              .thumbnail(data-file=podcast.file, data-title=podcast.category)
                 img(src="/img/logo.png")
             .media-object-section
               h5= podcast.category
