--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -5,14 +5,44 @@ block vars
 
 block content
   block contentAjax
-    h1 A propos de nous.
-    p On est cool.
-    div.row
-      div.column.small-12.large-6
-        p Coucou 1
-      div.column.small-12.large-6
-        p Coucou 2
-    script(src="https://maps.googleapis.com/maps/api/js")
-    script.
-      // The init map here
-
+    .column.small-12.large-6#target
+      h1 A propos de nous.
+      p Graf'hit est une radio membre de la 
+        a(href="http://ferarock.org") Ferarock.
+        br
+        | Retrouvez-nous sur 
+        a(href="https://www.facebook.com/Radio.Grafhit") Facebook.
+      h2 Nous contacter
+      p Téléphone :
+        br
+        | 03 44 23 46 75
+        br
+        | 03 44 23 49 08
+      p Email :
+        br
+        | antenne (a) grafhit.net
+      p SMS :
+        br
+        | 06 95 065 026
+      p Adresse* :
+        br
+        | Graf'hit 
+        br
+        | BP 60319
+        br
+        | 60200 Compiègne
+        br
+        br
+        | * Pour venir prendre l'escalier...
+    div.column.small-12.large-6
+      #map
+      script.
+        document.getElementById('map').style.height = (document.getElementById('target').clientHeight - 32) + "px";
+        function initMap(){
+          var mapDiv = document.getElementById('map');
+          var map = new google.maps.Map(mapDiv, {
+            center: {lat: 49.415, lng: 2.818},
+            zoom: 14
+          });
+        }
+      script(src="https://maps.googleapis.com/maps/api/js?callback=initMap")
