--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -34,6 +34,13 @@ block content
         br
         br
         | * Pour venir prendre l'escalier...
+      p Site réalisé avec passion lors d'un projet étudiant avec :
+        br
+        | Emilie Confais
+        br
+        | Clément Letoc
+        br
+        | Sylvain Doignon
     div.column.small-12.large-6
       #map
       script.
