--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -34,7 +34,7 @@ block content
         br
         br
         | * Pour venir prendre l'escalier...
-      p Site réalisé avec passion lors d'un projet étudiant avec :
+      p Site réalisé avec passion <F12>lors d'un projet étudiant avec :
         br
         | Emilie Confais
         br
