--- a/views/grille-des-programmes.pug
+++ b/views/grille-des-programmes.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
 
 block vars
-  - var pageTitle="A propos"
+  - var pageTitle="Grille des programmes"
 
 block content
   block contentAjax
