--- a/views/podcasts.pug
+++ b/views/podcasts.pug
@@ -19,4 +19,4 @@ block content
                 img(src="/img/logo.png")
             .media-object-section
               h5= podcast.category
-              p Emission du #{myFunctions.formatDate(podcast.date)}
+              p Emission du #{func.formatDate(podcast.date)}
