--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,9 @@
 #logo {
   display: block;
   width: 100%;
+  margin: 0px auto 5px;
+  max-width: 325px;
+  padding-bottom: 4px;
 }
 
 body {
@@ -116,6 +119,7 @@ option, select {
 #player #progress {
   display: block;
   width: 100%;
+  height: 15px;
 }
 
 #player #progressText {
