Started MySQL + Fixes + Better config

--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -59,7 +59,7 @@ block content
             map: map,
           });
          var infowindow = new google.maps.InfoWindow({
-            content: "<b>" + "#{config.SITE_TITLE}"  + "</b>"
+            content: "<b>" + "#{config.SITE.TITLE}"  + "</b>"
           });
          infowindow.open(map,marker);
         }
