--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -6,7 +6,7 @@ else
   doctype html
   html(lang="fr")
     head
-      title #{config.SITE_TITLE} | #{pageTitle}
+      title #{config.SITE.TITLE} | #{pageTitle}
       meta(name='viewport', content="width=device-width,initial-scale=1.0")
       link(rel="icon", type="image/png", href="/img/logo.png")
       link(rel="stylesheet", href="/css/concat.css")
