--- a/views/index.pug
+++ b/views/index.pug
@@ -13,9 +13,9 @@ block content
       .media-object-section
         h4 You
         p Really 
-
-    h1 Actualités
-    each actu in actus
-      .callout
-        h5= actu.title
-        p When using the data-closable attribute, you can optionally add Motion UI classes to the attribute to change the closing animation. If no class is added, the plugin defaults to jQuery's .fadeOut() function.
+    if actus
+      h1 Actualités
+      each actu in actus
+        .callout
+          h5= actu.title
+          p !{actu.content}
