--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,6 +93,7 @@ option, select {
   left: 0px;
   background: rgba(255, 255, 255, .85);
   border-top: #cacaca solid 1px;
+  z-index: 100;
 }
 
 #player #playPause {
@@ -191,4 +192,14 @@ option, select {
   #player #playerButton {
     height: 30px;
   }
+}
+
+/* Fix */
+table#calendar {  
+    background-color: transparent;
+      margin-bottom: 0;
+}
+
+#calendar tr, tr.fc-minor, thead {  
+    background: initial;
 }
