--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -33,12 +33,12 @@ block content
         | 60200 Compiègne
         br
         br
-        | * Pour venir prendre l'escalier...
-      p Site réalisé avec passion <F12>lors d'un projet étudiant avec :
+        | * Pour venir prendre l'escalier à partir du Parking de BF.
+      p Site réalisé avec passion lors d'un projet étudiant avec :
         br
         | Emilie Confais
         br
-        | Clément Letoc
+        | Clément Henry
         br
         | Sylvain Doignon
     div.column.small-12.large-6
